logo changes to rmit whilst minimalised others

--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,11 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
@@ -22,6 +24,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -39,4 +42,25 @@
 
 .read-the-docs {
   color: #888;
+}
+
+
+.slam {
+  position: relative;
+  animation: slam 1s forwards;
+  opacity: 0;
+}
+
+@keyframes slam {
+  0% {
+    transform: translateY(-10%);
+    /* Start off-screen above */
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0);
+    /* Slam onto the screen vertically */
+    opacity: 1;
+  }
 }
